crates/sui-prover/tests/snapshots/spec_no_abort_check-opaque.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 271
expression: output
---
exiting with verification errors
error: spec code itself should not abort
   ┌─ tests/inputs/spec_no_abort_check-opaque.fail.move:13:17
   │
13 │     ensures(res - 1 == x);
   │                 ^
   │
   =     at tests/inputs/spec_no_abort_check-opaque.fail.move:10: foo_spec
